Implements checkStyle suggestions.